second blog and fixed art890 directory in /blog

--- a/_posts/2018-06-25-intro.md
+++ b/_posts/2018-06-25-intro.md
@@ -4,7 +4,7 @@ title:  "Introduction to Gestural Musical Interfaces"
 date:   2018-06-21
 desc: "This is a blog series chronicling my independent study work at the DX Media Lab, Kansas State University."
 keywords: "art, music, music technology, computer science, machine learning, media arts, research, independent study"
-categories: [ART 890]
+categories: [Art890]
 tags: [introduction, theremin]
 icon: icon-html
 ---
