websamplr 2.0 blo title renameg

--- a/_posts/2019-02-16-websamplr2.0.md
+++ b/_posts/2019-02-16-websamplr2.0.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "webSamplr: M4L plugin to sample the web"
+title:  "webSamplr 2.0: Live looping/sampling anything on the web"
 date:   2019-02-15
 desc: "Blog 9: webSamplr 2.0"
 keywords: “sampling, ableton, live, max4live, audio engineering, art, music, music technology, computer science, internet, browser, samplers,music producers, midi, karma, looper, reverse"
