websamplr 2.0 missing images

--- a/_posts/2019-02-16-websamplr2.0.md
+++ b/_posts/2019-02-16-websamplr2.0.md
@@ -37,7 +37,7 @@ I explored other options such as recording audio into a buffer and dragging it i
 
 # Curated list of sample sources 
 
-<img src="{{ site.baseurl }}/_posts/websamplr/sources.png" alt="Sample sources" class="center" />
+<img src="{{ site.baseurl }}/static/assets/img/blog/websamplr/sources.png" alt="Sample sources" class="center" />
 
 Websamplr 2.0 no longer uses the bulky physical SQLite database in the file system. Instead, we have a curated list of sources to sample from hosted [here](https://github.com/sandcobainer/websamplr-rest-api/) on my Github repository. 
 
@@ -64,7 +64,7 @@ Output Device: Soundflower (ch.2)
    
 - Setup Ableton Live preferences  
 
-<img src="{{ site.baseurl }}/_posts/websamplr/audiorouting.png" alt="Audio routing" class="center" />
+<img src="{{ site.baseurl }}/static/assets/img/blog/websamplr/audiorouting.png" alt="Audio routing" class="center" />
 
 - Drag the .amxd M4L device onto ONE AUDIO track in Ableton Live. 
 
@@ -74,7 +74,7 @@ Output Device: Soundflower (ch.2)
 
 Use arrows and enter to navigate clips in Session View. A short pictorial description of the layout. 
 
-<img src="{{ site.baseurl }}_posts/websamplr/usage.png" alt="Layout help" class="center" />
+<img src="{{ site.baseurl }}/static/assets/img/blog/websamplr/usage.png" alt="Layout help" class="center" />
 
 
 # Watch webSamplr 2.0 in action!
